changed website description

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <meta name="theme-color" content="#000000" />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -31,8 +32,9 @@
     <!-- End Single Page Apps for GitHub Pages -->
     <meta
       name="description"
-      content="Web site about Nagorno-Karabakh"
+      content="On the 27th of September, Azerbaijan declared war on Armenia and invaded Nagorno-Karabakh. This website was created to contextualize the war in Nagorno-Karabakh and to let people know how to help. "
     />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico?">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
