--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <meta property="og:title"              content="Help Achieve Peace in Nagorno-Karabakh">
     <meta property="og:description" content="On the 27th of September, Azerbaijan declared war on Armenia and invaded Nagorno-Karabakh. This website was created to contextualize the war in Nagorno-Karabakh and to let people know how to help. ">
     <meta property="og:image" content="%PUBLIC_URL%/favicon.ico?">
-
+    <meta property="og:url" content="https://www.peaceforkarabakh.com"
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
